--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -2,7 +2,6 @@
 \label{appendix_constants}
 
 \footnotetext[1]{Die Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
-\footnotetext[2]{Die Dichte bei höheren Temperaturen wurde über die Dichte bei Raumtemperatur und den linearen Ausdehnungskoeffizienten berechnet}
 
 \begin{table}[H]
   \centering
@@ -43,6 +42,25 @@
 
 \begin{table}[H]
   \centering
+  \caption{Eigenschaften von Nickel}
+  \oddrowcolors
+  \begin{tabular}{|lll|}
+    \hline
+    \textbf{Größe}      & \textbf{Wert}          & \textbf{Referenz}              \\
+    \hline
+    Kristallstruktur    & fcc                    & \cite{haynes_crc_2011} S.4-150 \\
+    Gitterkonstante $a$ & \SI{3.5238}{\angstrom} & \cite{haynes_crc_2011} S.4-150 \\
+    \hline
+  \end{tabular}
+\end{table}
+
+\clearpage
+
+\footnotetext[1]{Die Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
+\footnotetext[2]{Die Dichte bei höheren Temperaturen wurde über die Dichte bei Raumtemperatur und den linearen Ausdehnungskoeffizienten berechnet}
+
+\begin{table}[H]
+  \centering
   \caption{Eigenschaften von Kupfer}
   \oddrowcolors
   \begin{tabular}{|lll|}
@@ -57,20 +75,6 @@
     Gitterkonstante $a$                      & \SI{3.6150}{\angstrom}                         & \cite{haynes_crc_2011} S.4-146  \\
     Bindungslänge $r_\text{bond}$            & \SI{2.5562}{\angstrom}                         & berechnet\footnotemark[1]       \\
     Linearer Ausdehnungskoeffizient $\alpha$ & \SI{16.5e-6}{\per\kelvin}                      & \cite{haynes_crc_2011} S.12-206 \\
-    \hline
-  \end{tabular}
-\end{table}
-
-\begin{table}[H]
-  \centering
-  \caption{Eigenschaften von Nickel}
-  \oddrowcolors
-  \begin{tabular}{|lll|}
-    \hline
-    \textbf{Größe}      & \textbf{Wert}          & \textbf{Referenz}              \\
-    \hline
-    Kristallstruktur    & fcc                    & \cite{haynes_crc_2011} S.4-150 \\
-    Gitterkonstante $a$ & \SI{3.5238}{\angstrom} & \cite{haynes_crc_2011} S.4-150 \\
     \hline
   \end{tabular}
 \end{table}
@@ -96,4 +100,22 @@
 
 \end{table}
 
-\footnotetext[1]{Die Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
+\begin{table}[H]
+  \centering
+  \caption{Eigenschaften von Aluminiumoxid}
+  \oddrowcolors
+  \begin{tabular}{|lll|}
+    \hline
+    \textbf{Größe}                                         & \textbf{Wert}                                 & \textbf{Referenz}                   \\
+    \hline
+    Dichte $\rho$, $\alpha$-kristallin, \SI{298}{\kelvin}  & \SI{3.98}{\gpcc}                              & \cite{haynes_crc_2011} S.4-??       \\
+    Dichte $\rho$, $\alpha$-kristallin, \SI{1500}{\kelvin} & \SI{3.80}{\gpcc}                              & \cite{fiquet_high-temperature_1999} \\
+    Dichte $\rho$, $\gamma$-kristallin, \SI{300}{\kelvin}  & \SI{3.67}{\gpcc}                              & \cite{dynys_alpha_1982}             \\
+    Dichte $\rho$, amorph, \SI{300}{\kelvin}               & \SI{3.2}{\gpcc}-\SI{3.2}{\gpcc}               & \cite{wang_dependence_1997}         \\
+    Schmelztemperatur $T_m$                                & \SI{55555}{\celsius} (\SI{55828.15}{\kelvin}) & \cite{haynes_crc_2011} S.4-87       \\
+    Atomgewicht $u$, \ce{Al}                               & \SI{55555}{\gram\per\mole}                    & \cite{haynes_crc_2011} S.4-87       \\
+    Atomgewicht $u$, \ce{O}                                & \SI{55555}{\gram\per\mole}                    & \cite{haynes_crc_2011} S.4-87       \\
+    \hline
+  \end{tabular}
+
+\end{table}
