--- a/literature.bib
+++ b/literature.bib
@@ -1461,24 +1461,6 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/8QEUZ4A5/Swanepoel - 1984 - Determination of surface roughness and optical con.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/HHKMP8KF/023.html:text/html}
 }
 
-@article{gago_nanopatterning_2002,
-	title = {Nanopatterning of silicon surfaces by low-energy ion-beam sputtering: dependence on the angle of ion incidence},
-	volume = {13},
-	issn = {0957-4484},
-	shorttitle = {Nanopatterning of silicon surfaces by low-energy ion-beam sputtering},
-	url = {http://iopscience.iop.org/0957-4484/13/3/313},
-	doi = {10.1088/0957-4484/13/3/313},
-	abstract = {We report on the production of nanoscale patterning on Si substrates by low-energy ion-beam sputtering. The surface morphology and structure of the irradiated surface were studied by atomic force microscopy ({AFM}) and high-resolution transmission electron microscopy ({HRTEM}). Under ion irradiation at off-normal incidence angle ({\textasciitilde}50°), {AFM} images show the formation of both nanoripple and sawtooth-like structures for sputtering times longer than 20 min. The latter feature coarsens appreciably after 60 min of sputtering, inducing a large increase in the surface roughness. This behaviour is attributed to the preferential direction determined on the substrate by the ion beam for this incidence angle, leading to shadowing effects among surface features in the sputtering process. Under irradiation at normal incidence, the formation of an hexagonal array of nanodots is induced for irradiation times longer than 2 min. The shape and crystallinity of the nanodots were determined by {HRTEM}. At this incidence angle, the surface roughness is very low and remains largely unchanged even after 16 h of sputtering. For the two angle conditions studied, the formation of the corresponding surface structures can be understood as the interplay between an instability due to the sputtering yield dependence on the local surface curvature and surface smoothing processes such as surface diffusion.},
-	number = {3},
-	urldate = {2014-11-10},
-	journal = {Nanotechnology},
-	author = {Gago, R. and Vázquez, L. and Cuerno, R. and Varela, M. and Ballesteros, C. and Albella, J. M.},
-	month = jun,
-	year = {2002},
-	pages = {304--308},
-	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QI3XVUJA/Gago et al. - 2002 - Nanopatterning of silicon surfaces by low-energy i.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/8FC5ND8K/313.html:text/html}
-}
-
 @article{adamov_electrical_1974,
 	title = {Electrical and structural properties of thin gold films obtained by vacuum evaporation and sputtering},
 	volume = {24},
@@ -1635,4 +1617,76 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	year = {1956},
 	pages = {55--68},
 	file = {ZNA-1956-11a-0055.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/CG2IX8P8/ZNA-1956-11a-0055.pdf:application/pdf}
+}
+
+@article{de_zwart_sputtering_1986,
+	title = {Sputtering of silicon by multiply charged ions},
+	volume = {177},
+	issn = {0039-6028},
+	url = {http://www.sciencedirect.com/science/article/pii/0039602886901263},
+	doi = {10.1016/0039-6028(86)90126-3},
+	abstract = {We report on the sputtering of Si by 20 {keV} multiply charged Ar ions with primary charge state q ⩽ 9. To investigate the role of “electronic” sputtering, both the yield of positively charged secondary ions and the total sputtering yield (i.e. ions + neutrals) have been measured versus q. The secondary ion yield increases with increasing q, but the total sputtering yield remains however unaffected. From the comparably small effect observed we conclude that “electronic” sputtering does not contribute significantly to the ejection process.},
+	number = {2},
+	urldate = {2014-11-20},
+	journal = {Surface Science},
+	author = {De Zwart, S. T. and Fried, T. and Boerma, D. O. and Hoekstra, R. and Drentje, A. G. and Boers, A. L.},
+	month = dec,
+	year = {1986},
+	pages = {L939--L946},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/7RF9G7FA/De Zwart et al. - 1986 - Sputtering of silicon by multiply charged ions.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/9DVAF6NP/0039602886901263.html:text/html}
+}
+
+@article{smith_chemical_2000,
+	title = {Chemical vapour deposition of the oxides of titanium, zirconium and hafnium for use as high-k materials in microelectronic devices. A carbon-free precursor for the synthesis of hafnium dioxide},
+	volume = {10},
+	copyright = {Copyright © 2000 John Wiley \& Sons, Ltd.},
+	issn = {1099-0712},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/1099-0712(200005/10)10:3/5<105::AID-AMO402>3.0.CO;2-J/abstract},
+	doi = {10.1002/1099-0712(200005/10)10:3/5<105::AID-AMO402>3.0.CO;2-J},
+	abstract = {A brief survey of the precursors used for the chemical vapour deposition of the dioxides of titanium, zirconium and hafnium is presented. The review covers precursors used for the closely related process known as atomic layer chemical vapour deposition ({ALCVD} or {ALD}). Precursors delivered by standard carrier gas transport and by direct liquid injection ({DLI}) methods are included. The complexes fall into four classes based upon the ligands: halides, alkoxides, acetylacetonates (acac) and nitrates. Compounds bearing a mixture of ligand types have also found application in this area. The impact of the ligand on the microstructure of the metal oxide film is greatest at lower temperatures where the deposition rate is limited by the surface reactivity. The first use of anhydrous hafnium nitrate, Hf({NO}3)4, to deposit films of hafnium oxide on silicon is reported. The films are characterized by Rutherford backscattering and X-ray photoelectron spectroscopy, X-ray diffraction and transmission electron microscopy. Copyright © 2000 John Wiley \& Sons, Ltd.},
+	number = {3-5},
+	urldate = {2014-11-20},
+	journal = {Advanced Materials for Optics and Electronics},
+	author = {Smith, Ryan C. and Ma, Tiezhong and Hoilien, Noel and Tsung, Lancy Y. and Bevan, Malcolm J. and Colombo, Luigi and Roberts, Jeffrey and Campbell, Stephen A. and Gladfelter, Wayne L.},
+	month = may,
+	year = {2000},
+	keywords = {{CVD}, hafnium dioxide, metal nitrates, precursors, titanium, zirconium},
+	pages = {105--114},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5XTM8GTZ/Smith et al. - 2000 - Chemical vapour deposition of the oxides of titani.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/E8XTVST9/abstract.html:text/html}
+}
+
+@misc{torvalds_git_2014,
+	title = {Git Project Page},
+	url = {http://git-scm.com/},
+	journal = {Git},
+	author = {Torvalds, Linus},
+	month = nov,
+	year = {2014}
+}
+
+@misc{thompson_lammps_2013,
+	title = {{LAMMPS} Source Code Repository: Removal of Al\_Al0\_AlN {ReaxFF} file},
+	url = {https://github.com/lammps/lammps/commit/471694a7e7be1a5d9b88fecc8ad027ee8d5b9c6d},
+	journal = {lammps/lammps - {GitHub}},
+	author = {Thompson, Aidan},
+	month = may,
+	year = {2013}
+}
+
+@article{wang_dependence_1997,
+	title = {The dependence of hardness on the density of amorphous alumina thin films by {PECVD}},
+	volume = {310},
+	issn = {0040-6090},
+	url = {http://www.sciencedirect.com/science/article/pii/S0040609097004045},
+	doi = {10.1016/S0040-6090(97)00404-5},
+	abstract = {Smooth, uniform and transparent aluminum oxide films were deposited at low temperature (≤ 500°C) by r.f. plasma enhanced chemical vapor deposition ({PECVD}) with {AlCl}3, H2 and {CO}2 as the reactants. The measurements of mechanical and optical properties demonstrate a potential application of {PECVD} aluminum oxide film as an optical protective coating. The variation of film hardness and density with deposition parameters is apparent and shows a similar dependence while the composition stoichiometry is not so influenced. For amorphous thin films incorporating hydrogen and/or microvoid with no apparent variation on composition stoichiometry, the film hardness is dominated by density and a function near linear can be constructed as energy density is taken into account as an apparent character of hardness.},
+	number = {1–2},
+	urldate = {2014-11-20},
+	journal = {Thin Solid Films},
+	author = {Wang, H. L. and Lin, C. H. and Hon, M. H.},
+	month = nov,
+	year = {1997},
+	keywords = {alumina, Amorphous, Hardness and packing density},
+	pages = {260--264},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/TI7X2UI9/Wang et al. - 1997 - The dependence of hardness on the density of amorp.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/HE96D7A5/S0040609097004045.html:text/html}
 }
