--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -2,32 +2,29 @@
 \label{aluminaald}
 
 Einen Vorzeige-Prozess für Atomlagenabscheidungen bildet die Abscheidung von Aluminiumoxid \ce{Al2O3}\cite{puurunen_surface_2005}, für die häufig das Precursorpaar Trimethylaluminium (TMA, \ce{Al(CH4)3}) und Wasser genutzt wird.
-Aufgrund seiner relativ hohen Permittivität von $k\approx 8$ ersetzt Aluminiumoxid \todo{andere Materialien nennen, Satz neu schreiben}gemeinsam mit anderen Materialien langsam Siliziumdioxid ($k=3.9$) als Dielektrikum in der Halbleiterindustrie.
+Aufgrund seiner relativ hohen Permittivität von $k\approx 8$ ersetzt \ce{Al2O3} langsam gemeinsam mit Materialien wie \ce{HfO2} und \ce{ZrO2}, welche ebenfalls per Gasphasenabscheidung produziert werden können\cite{smith_chemical_2000}, Siliziumdioxid ($k=3.9$) als Dielektrikum in der Halbleiterindustrie.
 Deshalb soll der TMA-\ce{H2O}-Prozess im Folgenden besonders hinsichtlich der Reaktion der Precursormoleküle mit der Oberfläche untersucht werden.
-Einige Reaktionen des Wasser-Halbzyklus' konnten dabei erfolgreich simuliert werden, \todo{Wort!}wohingegen die Simulation des TMA-Halbzyklus' bisher keinen Erfolg zeigte.
 
-\todoline{Jörg: Vielleicht sollte man hier etwas deutlicher herausstellen, dass man hier Anlauf genommen hat, komplette Halbzyklen mit allen Precursorreaktionen vollständig mit reaktiven Kraftfeldern zu beschreiben. Das ist leider aufgrund diverser Unzulänglichkeiten der Parametersätze lediglich für die Oberflächen-Hydroxylierung gelungen}
+Dazu wurden verschiedene Parametersätze hinsichtlich der Anwendbarkeit auf reaktive Oberflächenabscheidungen untersucht, und schließlich erste Oberflächenreaktionen mit ihnen simuliert.
+Dabei ist bisher lediglich die Simulation der reaktiven Hydroxylierung der Oberfläche gelungen, was auf die mangelhafte Beschreibung der \ce{Al-C}-Bindungen mit den benutzten Potentialen zurück zu führen ist.
 
 \subsection{Parametersätze}
 
-Für die MD-Simulation von \ce{Al2O3} stehen drei Parametrisierungen zur Verfügung, die bereits aus den Untersuchungen der Silizium-Potentiale bekannt sind:\\
-\textbf{Al\_AlO\_AlN} aus LAMMPS\cite{plimpton_lammps_2014}, \textbf{liu\_ettringite}\cite{liu_development_2012}, welches nachfolgend nur als \textbf{liu} geführt werden soll, und \textbf{narayanan}\cite{narayanan_reactive_2012}.
-Ihnen ist gemein, dass sie ausgehend von Silizium-kompatiblen Potentialen um Parameter für Aluminium-Verbindungen erweitert wurden.
-\todo{Was hat Silizium damit zu tun?}Auf eine Bewahrung der \todo{Joerg: könnte man hier nicht die Si-Si Parameter aus dem vorigen Abschnitt verwenden (Nein. kulkarni hat kein Al, ist auch nicht dafür gemacht)}Konsistenz der Siliziumparameter wurde dabei scheinbar verzichtet, so dass etwa mit der Liu-Datei eine verlässliche Simulation von Silizium-Verbindungen verhindert, im Gegenzug aber die Simulation von Aluminium-Verbindungen ermöglicht wird.
+Für die MD-Simulation von \ce{Al2O3} stehen drei Parametrisierungen zur Verfügung, die bereits aus den Untersuchungen der Silizium-Potentiale bekannt sind (Abschnitt~\ref{siliconpvd}):\\
+\pot{Al\_AlO\_AlN} aus LAMMPS\cite{plimpton_lammps_2014}, \pot{liu\_ettringite}\cite{liu_development_2012}, welches nachfolgend nur als \pot{liu} geführt werden soll, und \pot{narayanan}\cite{narayanan_reactive_2012}.
+Ihnen ist gemein, dass sie ausgehend von Silizium-Parametrisierungen um Parameter für Aluminium-Verbindungen erweitert wurden, weshalb sie auch im vorherigen Kapitel untersucht wurden.
+Auf eine Bewahrung der Konsistenz der Siliziumparameter wurde dabei scheinbar verzichtet, so dass etwa mit der \pot{liu}-Parametrisierung eine verlässliche Simulation von Silizium-Verbindungen verhindert, im Gegenzug aber die Simulation von Aluminium-Verbindungen ermöglicht wird.
+Eine Kombination verschiedener Parametrisierungen ist zwar denkbar und wird bereits kommerzieller Software durchgeführt\cite{biovia_materials_2014}, würde aber für die vorliegenden Potentiale höchstens zweifelhafte Verbesserungen bringen.
 
-Die Al\_AlO\_AlN-Datei stammt direkt aus der offiziellen LAMMPS-Distribution, wurde jedoch am 17. Mai 2013 nahezu kommentarlos aus dem Paket entfernt, was sich vermutlich auf mangelnde Kenntnis der Urheberschaft der Parameter sowie ihrer Zielsetzung zurückführen lässt.
-Diese Vermutung wird von der \todo{Joerg: wo fand die statt? -> git repository, commit log}Überarbeitung der Referenzen auf wissenschaftliche Publikationen für alle Parametersätze im selben Zeitraum gestützt.
-Bei den Recherchen konnte kein Hinweis auf das ursprüngliche Anwendungsgebiet gefunden werden, weshalb mit diesen Parametern berechnete Eigenschaften gesondert überprüft werden sollten.
-Es lässt sich jedoch sagen, dass es zeitgleich mit dem \textbf{lg}-Kraftfeld, welches sich bei den Silizium-Untersuchungen als unzureichend heraus gestellt hat, Eingang in LAMMPS gefunden hat.
+Die \pot{Al\_AlO\_AlN}-Datei stammt direkt aus der offiziellen LAMMPS-Distribution\cite{plimpton_lammps_2014}, wurde jedoch am 17. Mai 2013 während der Ergänzung von Referenzen auf wissenschaftliche Publikationen in anderen Parameterdateien kommentarlos aus dem Paket entfernt\cite{thompson_lammps_2013}.
+Bei den Recherchen konnte kein Hinweis auf das ursprüngliche Anwendungsgebiet gefunden werden, weshalb mit diesen Parametern berechnete Eigenschaften mit Vorsicht überprüft werden.
 
-Das Liu-Potentialdatei wurde für die Simulation von Ettringit (\ce{Ca6[Al(OH)6]2(SO4)3 26H2O}) erstellt, welches \ce{Al-O}-Bindungen und \ce{OH}-Gruppen enthält, sodass zumindest die Simulation des Bulkmaterials und einer hydroxylierten Oberfläche aussichtsreich erscheint.
-Sie unterstützt einige der Precursorreaktionen und stellt sich daher als Favorit für Parsivald-Simulationen heraus, obwohl ihr eigentliches Anwendungsgebiet auf strukturellen Eigenschaften von Kristallen liegt.
+Das \pot{liu}-Potentialdatei wurde für die Simulation von Ettringit (\ce{Ca6[Al(OH)6]2(SO4)3 26H2O}) erstellt, welches \ce{Al-O}-Bindungen und \ce{OH}-Gruppen enthält, sodass zumindest die Simulation des Bulkmaterials und einer hydroxylierten Oberfläche aussichtsreich erscheint.
+Sie beschreibt die Oberflächenhydroxylierung und stellt sich daher als Favorit für Parsivald-Simulationen heraus, obwohl ihr eigentliches Anwendungsgebiet auf der Simulation von Kristallen liegt.
 
-Zuletzt steht die Narayanan-Parametrisierung für \ce{Li-Al}-Silikate für die Simulation von Eukryptit (\ce{LiAl[SiO4]}) zur Verfügung, lässt aber keine endgültige Aussage über die Qualität der \ce{Al-O}-Bindungen und \ce{OH}-Gruppen zu.
-Zwar besteht ihr Trainingssatz aus verschiedenen Lithium-Aluminium-Kristallen, aber nur $\gamma$-\ce{LiAlO2} beinhaltet direkte \ce{Al-O}-Bindungen, wo hingegen keine der Strukturen Wasserstoff beinhaltet.
-Es ist daher unwahrscheinlich, dass die Narayanan-Potentialdatei komplizierte Systeme verlässlich darstellt.
-
-\todo{Das Fazit kommt etwas früh}Abschließend lässt sich sagen, dass zur vollständigen Simulation der untersuchten Systeme die Erstellung einer eigenen Parametrisierung notwendig wäre, die jedoch den Fokus dieser Arbeit übersteigt.
+Zuletzt steht die \pot{narayanan}-Parametrisierung für \ce{Li-Al}-Silikate, insbesondere zur Simulation von Eukryptit (\ce{LiAl[SiO4]}), zur Verfügung, lässt aber keine endgültige Aussage über die Qualität der \ce{Al-O}-Bindungen und \ce{OH}-Gruppen zu.
+Zwar besteht ihr Trainingssatz aus verschiedenen Lithium-Aluminium-Kristallen, aber nur $\gamma$-\ce{LiAlO2} beinhaltet direkte \ce{Al-O}-Bindungen, wo hingegen keine der Strukturen Hydroxylgruppen beinhaltet.
+Es ist daher unwahrscheinlich, dass die \pot{narayanan}-Potentialdatei komplizierte Systeme verlässlich darstellt.
 
 \subsection{Voruntersuchungen}
 
@@ -35,75 +32,67 @@ Wie in den vorherigen Abschnitten werden hier separate Voruntersuchungen durchge
 
 \subsubsection{Strukturelle Eigenschaften von \ce{Al2O3}}
 
-Zum Vergleich der strukturellen Eigenschaften des Bulkmaterials, wie etwa Dichte, Bindungslänge und Koordinationszahlen, wurde in der MD-Simulation ein $\alpha$-\ce{Al2O3}-Kristall bei \SI{1500}{\kelvin} relaxiert und vor den abschließenden Messungen auf Raumtemperatur herunter gekühlt.
-Durch einen methodischen Fehler wurden die Systeme zur Dichtebestimmung nicht vollends herunter gekühlt, weshalb die Referenzwerte anhand der Relaxationstemperatur korrigiert wurden.
-Damit ergibt sich ein korrigierter Referenzwert zwischen \SI{3.95}{\gpcc} bei \SI{300}{\kelvin} und \SI{3.8}{\gpcc} bei \SI{1500}{\kelvin}\cite{fiquet_high-temperature_1999}, der im direkten Vergleich als \SI{3.85}{\gpcc} abgeschätzt wird.
-Der dadurch entstehende Fehler ist im Vergleich zu Abweichungen um \SI{0.5}{\gpcc} gering.
+Zum Vergleich der strukturellen Eigenschaften des Bulkmaterials, wie etwa Dichte, Bindungslänge und Koordinationszahlen, wurde in der MD-Simulation ein $\alpha$-\ce{Al2O3}-Kristall bei \SI{1500}{\kelvin} für \num{100000} Zeitschritte isotherm-isobar relaxiert und vor den abschließenden Messungen auf Raumtemperatur herunter gekühlt.
+Die Abkühlung wurden versehentlich um einen Faktor 10 zu schnell durchgeführt, weshalb die beobachteten Dichten vorsichtig mit experimentellen Werten zu vergleichen sind, da sie noch vom Wert bei höheren Temperaturen dominiert sein können.
+Eine erneute Berechnung der Werte steht noch aus, doch zeigen sich anhand der Dichten der amorpher Strukturen genügend Hinweise auf die Anwendbarkeit der Parametrisierungen.
+Referenzwerte der Dichten für unterschiedliche Temperaturen wurden aus Referenz~\cite{fiquet_high-temperature_1999} entnommen, in der \SI{3.99}{\gpcc} bei Raumtemperatur und \SI{3.80}{\gpcc} bei \SI{1500}{\kelvin} berichtet werden.
 
-Für die Bestimmung der \todo{nur für liu?}Dichte der amorphen Struktur wurde das Bulkmaterial über den Schmelzpunkt von \SI{2317}{\kelvin} auf \SI{2555}{\kelvin} erhitzt, auf dieser Temperatur relaxiert und langsam auf Raumtemperatur abgekühlt.
-Aufgrund der strukturellen Vielfalt bei amorphen Aluminiumoxiden lässt sich keine eindeutige Referenzdichte angeben, so dass auf den in diesem Zusammenhang häufig genannten Wertebereich von \SIrange{3.2}{3.6}{\gpcc} zurückgegriffen wurde.
+Für die Bestimmung der Dichte der amorphen Struktur wurde das Bulkmaterial über den Schmelzpunkt von \SI{2317}{\kelvin} auf \SI{2555}{\kelvin} erhitzt, auf dieser Temperatur relaxiert und langsam auf Raumtemperatur abgekühlt.
+Aufgrund der strukturellen Vielfalt bei amorphen Aluminiumoxiden liegt der Referenzbereich der Dichte von gasphasen-abgeschiedenen \ce{Al2O3}-Schichten zwischen \SI{3.2}{\gpcc} und \SI{3.9}{\gpcc}\cite{wang_dependence_1997}.
 
-Bindungslängen und Koordinationszahlen wurden direkt aus der radialen Verteilungsfunktion bestimmt, wobei die Referenzwerte auf gleiche Weise durch die Untersuchung der Kristallstruktur bestimmt wurden, welche mittels Materials Studio\cite{biovia_materials_2014} auf Basis eines $\alpha$-\ce{Al2O3}-Kristalles präpariert wurde.
+Bindungslängen und Koordinationszahlen wurden direkt aus der radialen Verteilungsfunktion kristaliner Strukturen bestimmt, wobei die Referenzwerte auf gleiche Weise durch die Untersuchung der Kristallstruktur bestimmt wurden, welche mittels Materials Studio\cite{biovia_materials_2014} auf Basis eines $\alpha$-\ce{Al2O3}-Kristalles präpariert wurde.
+Aufgrund identischer Dichten und übereinstimmender Kristallgitter\todo{HAYNES CRC?} ist hier von einer guten Übereinstimmung mit experimentellen Werten auszugehen.
 
-\begin{table}
+Die Verteilung der Koordinationszahlen amorpher Schichten wurde in dieser Arbeit nicht näher untersucht, da einerseits nur Vergleiche mit anderen MD-Rechnungen zur Verfügung stehen\cite{gutierrez_molecular_2002}, andererseits ein eigenes Werkzeug hätte geschrieben werden müssen.
+Eine Einarbeitung eines solchen Werkzeuges zur Bestimmung der Koordinationslängen in Parsivald könnte allerdings helfen, die Struktur der Schicht während der laufenden Simulation zu untersuchen.
+
+\begin{table}[bp]
   \oddrowcolors
   \caption[Vergleich struktureller Eigenschaften von $\alpha$-\ce{Al2O3}]{
-    Vergleich struktureller Eigenschaften von $\alpha$-\ce{Al2O3} für verfügbare ReaxFF-Parametrisierungen.
+    Vergleich struktureller Eigenschaften von \ce{Al2O3} für verfügbare ReaxFF-Parametrisierungen.
     Referenzwerte stammen von einer relaxierten Kristallstruktur.
   }
   \label{tab:aluminabulks}
-  \todoline{Aus der Simulation? Was ist mit experimentellen Daten?}
-  \todoline{Referenzen!}
-  \todoline{Wie unterscheiden sich die Koordinationszahlen für kristallin und amorph?}
 
   \begin{tabularx}{\textwidth}{|Xllll|}
     \hline
-    \textbf{Eigenschaft}    & \textbf{Referenz}    & \textbf{Al\_AlO\_AlN} & \textbf{liu}         & \textbf{narayanan}   \\
+    \textbf{\pot{Eigenschaft}}          & \textbf{\pot{Referenz}} & \textbf{\pot{Al\_AlO\_AlN}} & \textbf{liu}         & \textbf{narayanan}   \\
     \hline
-    Dichte, amorph          & \SI{>3.2}{\gpcc}     & ~                     & \SI{3.66}{\gpcc}     & ~                    \\
-    Dichte, kristallin      & \SI{3.85}{\gpcc}     & \SI{4.31}{\gpcc}      & \SI{3.88}{\gpcc}     & \SI{3.76}{\gpcc}     \\
-    \ce{Al-O}-Bindungslänge & \SI{1.90}{\angstrom} & \SI{1.94}{\angstrom}  & \SI{1.88}{\angstrom} & \SI{1.85}{\angstrom} \\
-    \ce{Al-O}-Koordination  & \num{4.00}           & \num{5.40}            & \num{4.55}           & \num{4.05}           \\
-    \ce{Al-Al}-Koordination & \num{4.00}           & \num{6.66}            & \num{5.98}           & \num{5.10}           \\
-    \ce{O-O}-Koordination   & \num{12.0}           & \num{12.4}            & \num{11.0}           & \num{12.2}           \\
+    Dichte, $\alpha$-kristallin         & \SI{3.98}{\gpcc}        & \SI{4.31}{\gpcc}            & \SI{3.88}{\gpcc}     & \SI{3.76}{\gpcc}     \\
+    Dichte, amorph                      & \SI{>3.2}{\gpcc}        & ~                           & \SI{3.66}{\gpcc}     & \SI{2.93}{\gpcc}     \\
+    \ce{Al-O}-Bindungslänge, kristallin & \SI{1.90}{\angstrom}    & \SI{1.94}{\angstrom}        & \SI{1.88}{\angstrom} & \SI{1.85}{\angstrom} \\
+    \ce{Al-O}-Koordination, kristallin  & \num{4.00}              & \num{5.40}                  & \num{4.55}           & \num{4.05}           \\
+    \ce{Al-Al}-Koordination, kristallin & \num{4.00}              & \num{6.66}                  & \num{5.98}           & \num{5.10}           \\
+    \ce{O-O}-Koordination, kristallin   & \num{12.0}              & \num{12.4}                  & \num{11.0}           & \num{12.2}           \\
     \hline
   \end{tabularx}
 \end{table}
 
 Die Ergebnisse dieser Untersuchungen (Tabelle~\ref{tab:aluminabulks}) zeichnen ein vielseitiges Bild.
-Einerseits stimmen die \todo{Plural? Ist ja nur Al-O dargestellt}Bindungslängen für alle Parametrisierungen auf \todo{für große Werte von 2 percent}\SI{2}{\percent} überein, andererseits ergeben sich große Unterschiede in der Dichte der Kristalle, \todo{Joerg: wodurch können die verursacht werden? Was ist mit der Stöchiometrie?}die aber nicht mit den Bindungslängen korreliert sind.
+Einerseits stimmt die kristalline Bindungslänge für alle Parametrisierungen auf weniger als \SI{3}{\percent} überein, andererseits ergeben sich große Unterschiede in der Dichte der Kristalle, die mit einer leichten Verformung der Kristallstrukturen einher geht und dabei nicht mit den Bindungslängen korreliert ist.
+Im Fall von \pot{Al\_AlO\_AlN} weicht die kristalline Dichte um \SI{+8.3}{\percent} ab und übersteigt die Dichte der dichtesten \ce{Al2O3}-Kristalle bei Normaldruck, was sich auch an den überschätzten Koordinationszahlen zeigt.
+Die beiden verbleibenden Parametersätze zeigen eine geringere Dichte, die sich der von $\gamma$-\ce{Al2O3} mit \SI{3.67}{\gpcc}\cite{dynys_alpha_1982} nähert.
 
-So liegt für die Al\_AlO\_AlN-Parameter eine Abweichung um \SI{+12}{\percent} in der Dichte vor, allerdings ist die Bindungslänge um \SI{2}{\percent} erhöht, was für ähnliche Strukturen zu einer Ausdehnung des Kristalles und somit eine Verringerung der Dichte um \SI{6}{\percent} führen müsste.
-Erst bei Betrachtung der Koordinationszahlen zeigt sich die Ursache der Abweichung, die mit einer \ce{Al-O}-Koordinationszahl von \num{5.4} (Kristall: \num{4.0}) in einer Verformung des Kristalles liegt.
-Da $\alpha$-\ce{Al2O3} mit \SI{3.95}{\gpcc} eigentlich die dichteste Phase bei Normaldruck ist, sollten nur Übergänge zu weniger dichten Konfigurationen wie amorphem Aluminiumoxid oder etwa $\gamma$-\ce{Al2O3} möglich sein, das aufgrund seiner \todo{ist es das richtige Wort?}Porösität eine geringere Dichte von etwa \SI{3.67}{\gpcc}\cite{dynys_alpha_1982} aufweist.
-Da hier das Gegenteil der Fall ist, wurde die Al\_AlO\_AlN-Parameterdatei in vielen der nachfolgenden Untersuchungen nicht weiter betrachtet.
+Eine Bestimmung der amorphen Dichten für die \pot{liu}- und \pot{narayanan}-Parametersätze zeigt für \pot{liu} mit \SI{3.66}{\gpcc} eine amorphe Dichte im erwarteten Bereich, während \pot{narayanan} bei allen Simulationen eine Dichte von \SI{2.93}{\gpcc} erreicht und damit unterhalb der beobachteten Werte liegt, obwohl es die besten Ergebnisse für kristalline Strukturen zeigt.
 
-Die Liu-Parametrisierung weist ebenfalls eine geringe Änderung aller Koordinationszahlen auf, die sich in einer nur minimalen Verringerung der Dichte äußert.
-Anhand einer \ce{Al}-{O}-Koordination von \num{4.55} ist ersichtlich, dass die $\alpha$-Phase mit diesem Parametersatz nicht stabil ist und stattdessen scheinbar eine vergleichsweise dichte amorphe Phase angenommen wird.
-Für diesen Parametersatz wurde deshalb auch die Dichte eines amorphen Materiales mit \SI{3.66}{\gpcc} bestimmt, die zwar innerhalb des üblicherweise für amorphe Materialien genannten Bereiches von \SIrange{3.2}{3.6}{\gpcc} liegt, ansonsten aber unterhalb der im ersten Schritt bestimmten Dichte liegt, womit eine höhere \todo{ist es das richtige Wort?}Porösität denkbar wird.
-
-Insgesamt zeigt die Narayanan-Parameterdatei die besten Ergebnisse für kristalline Strukturen, obwohl sowohl die Bindungslänge als auch die Dichte ca. \SI{2}{\percent} unterhalb der jeweiligen Referenzwerte liegen.
-Dies ist im Zusammenhang mit dem Fehlen von \ce{Al-O}-Bindungen in den meisten Molekülen des Trainingssatzes eher überraschend, zeigt aber die Orthogonalität der einzelnen ReaxFF-Parameter, da so die Eigenschaften von $\gamma$-\ce{LiAlO2} die \ce{Al-O}-Bindungen dominieren, statt beim Fitting überschrieben zu werden.
-
-\subsubsection{Precursor-Simulationen}
+\subsubsection{Simulationen der Stabilität von Precursorn}
 
 Zur Untersuchung der Stabilität der Precursormoleküle wurden diese einzeln präpariert und per LAMMPS mit verschiedenen Kraftfeldern im kanonischen Ensemble simuliert.
-Dabei war schnell ersichtlich, dass Trimethylaluminium (TMA) von der Liu- sowie der Narayanan-Parametrisierung in Ermangelung der Ausprägung von \ce{Al-C}-Bindungen praktisch nicht wiedergegeben werden kann.
+Dabei war schnell ersichtlich, dass Trimethylaluminium (TMA) von der \pot{liu}- sowie der \pot{narayanan}-Para\-metr\-isierung durch die fehlende Beschreibung von \ce{Al-C}-Bindungen praktisch nicht wiedergegeben werden kann.
 Die Methylgruppen binden nicht mit dem zentralen Aluminium-Atom, so dass sie sich von diesem mit fortlaufender Simulationszeit linear entfernen.
-Einzig mittels des bereits ausgeschlossenen Al\_AlO\_AlN-Parametersatzes lassen sich stabile TMA-Moleküle simulieren.
+\todo{Bilder!}
+Einzig mit dem bereits ausgeschlossenen \pot{Al\_AlO\_AlN}-Parametersatz lassen sich stabile TMA-Moleküle simulieren.
 
-\todoline{Bilder im Anhang}
+Simulationen von Wassermolekülen waren hingegen mit allen Parametrisierungen erfolgreich.
+Anhand des \pot{Al\_AlO\_AlN}-Parametersatzes wurden auch Simulationen der Reaktionen zwischen TMA und Wasser in der Gasphase versucht, wie sie beispielsweise bei Vermischung der Precursorgase im ALD-Reaktor auftreten können, doch zeigten sie keinen Erfolg, da die \ce{Al-C}-Bindungen entweder zu stark sind oder in zu großem Maß von den Methylgruppen abgeschirmt werden.
 
-Simulationen von Wassermolekülen waren hingegen mit allen Parametrisierungen erfolgreich, doch wurden keine umfangreicheren Untersuchungen etwa hinsichtlich der Phasenübergänge durchgeführt, da für die Gasphasenabscheidung lediglich die Gasphase bei niedrigen Drücken sowie isolierte Reaktionen auf der Oberfläche relevant sind.
-Anhand des Al\_AlO\_AlN-Parametersatzes wurden auch Simulationen der Reaktionen zwischen TMA und Wasser in der Gasphase versucht, wie sie beispielsweise bei Vermischung der Precursorgase im ALD-Reaktor auftreten können, doch zeigten sie keinen Erfolg, da die \ce{Al-C}-Bindungen entweder zu stark sind oder in zu großem Maß von den Methylgruppen abgeschirmt werden.
+\subsubsection{Simulation der Hydroxylierung einer $\alpha$-\ce{Al2O3}-Oberfläche}
 
-\subsubsection{Precursor-Oberflächen-Reaktionen}
-
-Anstatt die Precursormoleküle in der Gasphase reagieren zu lassen, werden hier einzelne Wassermoleküle auf eine $\alpha$-\ce{Al2O3}-Kristalloberfläche gebracht, die mit den darauf befindlichen Sauerstoffatomen reagieren und die Oberfläche so hydroxylieren sollen\cite{shapovalov_ab_2000}.
-Zu diesem Zweck wurde ein mehrschichtiges System mit einem kristallinen Substrat und einer Schicht von Wassermolekülen in Gasphase präpariert, wie es in Abbildung~\ref{fig:wateraluminasurface-a} dargestellt ist.
-In der Simulation werden die Wassermoleküle mit einer maxwellschen Geschwindigkeit entsprechend \SI{500}{\kelvin} versehen, die Atome an der Unterseite des Substrates fest gehalten und das Berendsen-Thermostat auf den verbleibenden Teil des Substrates angewandt.
-Damit handelt es sich zwar streng gesehen nicht mehr um eine Simulation im kanonischen Ensemble, aber es wird auf separate Integratoren für Substrat (NVT) und Wasser (NVE) verzichtet, deren Grenzen bei erfolgreichen Reaktionen ohnehin aufgelöst werden.
-
+Abschließend soll die reaktive Hydroxylierung einer Kristall-Oberfläche mit Wassermolekülen simuliert werden.
+Dazu wurde eine Kristalloberfläche mit einer variablen Menge von Wassermolekülen in einem vertikalen Abstand, welcher mit \SI{10}{\angstrom} größer als die ReaxFF-Inter\-aktions\-reich\-weite von \SI{6}{\angstrom}, vorbereitet (Abbildung~\ref{fig:wateraluminasurface-a}) und in einer reinen MD-Simulation mit LAMMPS simuliert.
+In der Simulation werden die Wassermoleküle mit einer entsprechend der Maxwell-Distribution bei \SI{500}{\kelvin} versehen, die Atome an der Unterseite des Substrates fest gehalten und das aus Notwendigkeit verwendete Berendsen-Thermostat nur auf den mittleren Teil des Substrates angewandt, um seinen Einfluss auf die Reaktionen zu verringern.
+Dabei wird eine chemische Adsorption der Wassermoleküle erwartet\cite{shapovalov_ab_2000}, die zu einer Sättigung derOberfläche mit Hydroxyl-Gruppen bei einer Bedeckung von \SI{9.2}{\per\square\nano\meter}\cite{kim_energy_2011} führen sollte.
+Die Zahl der Wassermoleküle in der Simulation kann in den drei untersuchten Systemen zu Hydroxyl-Bedeckungen von \SI{5.8}{\per\square\nano\meter}, \SI{19.0}{\per\square\nano\meter} und \SI{57.6}{\per\square\nano\meter} führen.
 \begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.32\textwidth}
@@ -130,19 +119,19 @@ Damit handelt es sich zwar streng gesehen nicht mehr um eine Simulation im kanon
     Das Wasser reagiert mit Sauerstoffatomen an der Oberfläche zu Hydroxylgruppen.
   }
   \label{fig:wateraluminasurface}
-  \todoline{Hervorhebung auch in b?}
 \end{figure}
 
-Das Ergebnis der Simulationen für die Liu-Parameter (Abbildungen~\ref{fig:wateraluminasurface-b} und~\ref{fig:wateraluminasurface-c}) zeigt die gleichmäßige Bedeckung der Oberfläche mit Hydroxylgruppen (\SI{9.5}{\per\square\nano\meter}) neben gelegentlich adsorbierten Wassermolekülen, die keine Oberflächenreaktion eingegangen sind.
-Letztere sollten aber auf längere Sicht durch die Einflüsse der Überkoordinationsterme des ReaxFF-Potentiales entweder zerfallen oder sich von der Oberfläche lösen.
-\todo{Beschreibung der unterschiedlichen Startbedingungen genau hier und nicht im nächsten Satz}Trotz unterschiedlicher Startbedingungen stimmt der maximale Bedeckungsgrad der Oberfläche mit Hydroxylgruppen mit aus Elektronenstrukturrechnungen bestimmten Maximalwerten von \SI{9.2}{\per\square\nano\meter}\cite{kim_energy_2011} überein.
-Zu Beginn der Simulationen wurden ausreichende Mengen von Wassermolekülen für Bedeckungsgrade von \SI{5.8}{\per\square\nano\meter}, \SI{19.0}{\per\square\nano\meter} und \SI{57.6}{\per\square\nano\meter} präpariert, von denen die überschüssigen Wasser-Moleküle nicht mit der Oberfläche binden, sondern in der Gasphase verbleiben, wie in Abbildung~\ref{fig:wateraluminasurface-b} am oberen Rand des periodischen Simulationsraumes erkennbar ist.
-Einige der Wassermoleküle erscheinen durch die periodischen Randbedingungen des Simulationsraumes zerteilt, weshalb es sich scheinbar um Hydroxylmoleküle handelt, tatsächlich aber komplette Wassermoleküle verbleiben.
-Es konnte damit gezeigt werden, dass die Begrenzung der Reaktion von Wasser durch die sterische Hinderung der Wassermoleküle in der Simulation gut wiedergegeben wird.
+Mit den \pot{narayanan}-Parametern konnten keine Adsorptionen beobachtet werden, da sie in den Simulationen durch eine repulsive Kraft zwischen den Wassermolekülen und der Oberfläche verhindert werden.
+Das deutet darauf hin, dass Hydroxylgruppen auf einer Aluminiumoxid-Oberfläche von dem Parametersatz energetisch nicht bevorzugt werden oder die Reaktion mit einer übermäßig hohen Reaktionsbarriere verbunden ist.
+Zusammen mit dem Problem, Trimethylaluminium nicht darstellen zu können, ist dieser Parametersatz somit nicht in der Lage, den ALD-Prozess durch seine Precursor-Oberflächen-Reaktionen zu beschreiben.
 
-Eine repulsive Kraft zwischen den Wassermolekülen und der Oberfläche verhindert diese Reaktionen bei Nutzung der Narayanan-Parameter.
-Das deutet darauf hin, dass Hydroxylgruppen auf einer Aluminiumoxid-Oberfläche energetisch nicht bevorzugt werden oder die Reaktion mit einer hohen Reaktionsbarriere verbunden ist.
-Zusammen mit dem Problem, Trimethylaluminium nicht darstellen zu können, ist dieser Parametersatz somit nicht in der Lage, den ALD-Prozess durch seine Precursor-Oberflächen-Reaktionen darzustellen.
+Das Ergebnis der Simulationen für die \pot{liu}-Parameter (Abbildungen~\ref{fig:wateraluminasurface-b} und~\ref{fig:wateraluminasurface-c}) zeigt jedoch die gleichmäßige Bedeckung der Oberfläche mit Hydroxylgruppen (\SI{9.5}{\per\square\nano\meter}) neben gelegentlich adsorbierten Wassermolekülen, die keine Oberflächenreaktion eingegangen sind.
+Letztere sollten sich aber auf längere Sicht durch die Einflüsse der Überkoordinationsterme des ReaxFF-Potentiales von der Oberfläche lösen oder eine Reaktion mit benachbarten Sauerstoff-Atomen eingehen.
+Trotz der unterschiedlichen Startbedingungen stimmt der Bedeckungsgrad der Oberfläche mit Hydroxylgruppen den Maximalwerten von \SI{9.2}{\per\square\nano\meter}\cite{kim_energy_2011} überein.
+Die verbleibenden Wassermoleküle sind keine Adsorption auf der Oberfläche eingegangen, sondern in der Gasphase verblieben, wie in Abbildung~\ref{fig:wateraluminasurface-b} am oberen Rand des periodischen Simulationsraumes erkennbar ist.
+Einige der Wassermoleküle erscheinen durch die periodischen Randbedingungen des Simulationsraumes zerteilt, doch handelt es sich tatsächlich um vollständige Wassermoleküle verbleiben.
+Es konnte damit gezeigt werden, dass die Begrenzung der Reaktion von Wasser durch die sterische Hinderung der Wassermoleküle in der Simulation wiedergegeben wird.
 
-\todoline{um einen Absatz kürzen, damit keine \num{1.8} Leerseiten entstehen?}
-\todoline{Joerg: womöglich kann man das Ganze sinnvoll kürzen. Die Untersuchung der verschiedenen Reaktionen in diesem Abschnitt mit den verschiedenen Parametrisierungen hinterlässt ohnehin kein besonders klares Bild beim Leser. Vielleicht würde es reichen, wenn man all das, was nicht geht, nur knapp erwähnt.}
+Somit konnte mit dem \pot{liu}-Parametersatz die Hydroxylierung einer kristallinen \ce{Al2O3}-Ober\-fläche durch die Adsorption von Wassermolekülen simuliert werden.
+Eine Beschreibung von Trimethylaluminium zur vollständigen Simulation dieses ALD-Prozesses ist mit diesem Parametersatz aktuell nicht möglich.
+%%, was durch seine aufwendige Erweiterung zur Beschreibung von \ce{Al-C}-Bindungen gelöst werden könnte.
