missing values added

--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -5,22 +5,6 @@
 
 \begin{table}[H]
   \centering
-  \caption{Physikalische Konstanten}
-  \oddrowcolors
-  \begin{tabular}{|lll|}
-    \hline
-    \textbf{Größe}                  & \textbf{Wert}                           & \textbf{Referenz}               \\
-    \hline
-    Avogadro-Konstante $N_\text{A}$ & \SI{6.02214179e23}{\per\mole}              & \cite{haynes_crc_2011} S.1-1    \\
-    Boltzmann-Konstante $k_B$       & \SI{1.3806504e-23}{\joule\per\kelvin}   & \cite{haynes_crc_2011} S.1-2    \\
-    Molare Gaskonstante $R$         & \SI{8.31472e23}{\joule\per\mole\kelvin} & \cite{haynes_crc_2011} S.1-2    \\
-    Atomare Masseneinheit $u$       & \SI{1.660653872e-27}{\kilo\gram}        & \cite{haynes_crc_2011} S.1-2    \\
-    \hline
-  \end{tabular}
-\end{table}
-
-\begin{table}[H]
-  \centering
   \caption{Eigenschaften von Gold}
   \oddrowcolors
   \begin{tabular}{|lll|}
@@ -31,11 +15,31 @@
     Dichte $\rho$, \SI{500}{\kelvin}         & \SI{19.13}{\gpcc}                              & berechnet\footnotemark[2]       \\
     Dichte $\rho_m$, flüssig                 & \SI{17.31}{\gpcc}                              & \cite{haynes_crc_2011} S.4-128  \\
     Schmelztemperatur $T_m$                  & \SI{1064.18}{\celsius} (\SI{1337.33}{\kelvin}) & \cite{haynes_crc_2011} S.4-65   \\
-    Atomgewicht $u$                          & \SI{196.967}{\gram\per\mole}                   & \cite{haynes_crc_2011} S.4-65   \\
+    Atomgewicht $u$                          & \SI{196.967}{\gram\per\mole}                   & \cite{haynes_crc_2011} S.1-12   \\
     Kristallstruktur                         & fcc                                            & \cite{haynes_crc_2011} S.4-147  \\
     Gitterkonstante $a$                      & \SI{4.0786}{\angstrom}                         & \cite{haynes_crc_2011} S.4-147  \\
     Bindungslänge $r_\text{bond}$            & \SI{2.8840}{\angstrom}                         & berechnet\footnotemark[1]       \\
     Linearer Ausdehnungskoeffizient $\alpha$ & \SI{14.2e-6}{\per\kelvin}                      & \cite{haynes_crc_2011} S.12-206 \\
+    \hline
+  \end{tabular}
+\end{table}
+
+\begin{table}[H]
+  \centering
+  \caption{Eigenschaften von Kupfer}
+  \oddrowcolors
+  \begin{tabular}{|lll|}
+    \hline
+    \textbf{Größe}                           & \textbf{Wert}                                  & \textbf{Referenz}               \\
+    \hline
+    Dichte $\rho$, fest                      & \SI{8.96}{\gpcc}                               & \cite{haynes_crc_2011} S.4-61   \\
+    Dichte $\rho_m$, flüssig                 & \SI{7.997}{\gpcc}                              & \cite{haynes_crc_2011} S.4-128  \\
+    Schmelztemperatur $T_m$                  & \SI{1084.62}{\celsius} (\SI{1357.77}{\kelvin}) & \cite{haynes_crc_2011} S.4-61   \\
+    Atomgewicht $u$                          & \SI{63.546}{\gram\per\mole}                    & \cite{haynes_crc_2011} S.1-12   \\
+    Kristallstruktur                         & fcc                                            & \cite{haynes_crc_2011} S.4-146  \\
+    Gitterkonstante $a$                      & \SI{3.6150}{\angstrom}                         & \cite{haynes_crc_2011} S.4-146  \\
+    Bindungslänge $r_\text{bond}$            & \SI{2.5562}{\angstrom}                         & berechnet\footnotemark[1]       \\
+    Linearer Ausdehnungskoeffizient $\alpha$ & \SI{16.5e-6}{\per\kelvin}                      & \cite{haynes_crc_2011} S.12-206 \\
     \hline
   \end{tabular}
 \end{table}
@@ -61,40 +65,22 @@
 
 \begin{table}[H]
   \centering
-  \caption{Eigenschaften von Kupfer}
-  \oddrowcolors
-  \begin{tabular}{|lll|}
-    \hline
-    \textbf{Größe}                           & \textbf{Wert}                                  & \textbf{Referenz}               \\
-    \hline
-    Dichte $\rho$, fest                      & \SI{8.96}{\gpcc}                               & \cite{haynes_crc_2011} S.4-61   \\
-    Dichte $\rho_m$, flüssig                 & \SI{7.997}{\gpcc}                              & \cite{haynes_crc_2011} S.4-128  \\
-    Schmelztemperatur $T_m$                  & \SI{1084.62}{\celsius} (\SI{1357.77}{\kelvin}) & \cite{haynes_crc_2011} S.4-61   \\
-    Atomgewicht $u$                          & \SI{63.546}{\gram\per\mole}                    & \cite{haynes_crc_2011} S.4-61   \\
-    Kristallstruktur                         & fcc                                            & \cite{haynes_crc_2011} S.4-146  \\
-    Gitterkonstante $a$                      & \SI{3.6150}{\angstrom}                         & \cite{haynes_crc_2011} S.4-146  \\
-    Bindungslänge $r_\text{bond}$            & \SI{2.5562}{\angstrom}                         & berechnet\footnotemark[1]       \\
-    Linearer Ausdehnungskoeffizient $\alpha$ & \SI{16.5e-6}{\per\kelvin}                      & \cite{haynes_crc_2011} S.12-206 \\
-    \hline
-  \end{tabular}
-\end{table}
-
-\begin{table}[H]
-  \centering
   \caption{Eigenschaften von Silizium}
   \oddrowcolors
   \begin{tabular}{|lll|}
     \hline
-    \textbf{Größe}                & \textbf{Wert}                               & \textbf{Referenz}              \\
+    \textbf{Größe}                & \textbf{Wert}                            & \textbf{Referenz}              \\
     \hline
-    Dichte $\rho$, kristallin     & \SI{2.3296}{\gpcc}                          & \cite{haynes_crc_2011} S.4-87  \\
-    Dichte $\rho$, amorpher Film  & \SI{2.29}{\gpcc}                            & \cite{remes_optical_1998}     \\
-                                  & (\SI{2.2}{\gpcc} - \SI{2.24}{\gpcc})        & \cite{renner_density_1973}     \\
-    Schmelztemperatur $T_m$       & \SI{1414}{\celsius} (\SI{1687.15}{\kelvin}) & \cite{haynes_crc_2011} S.4-87  \\
-    Atomgewicht $u$               & \SI{28.086}{\gram\per\mole}                 & \cite{haynes_crc_2011} S.4-87  \\
-    Kristallstruktur              & diamant                                     & \cite{haynes_crc_2011} S.4-151 \\
-    Gitterkonstante $a$           & \SI{5.4305}{\angstrom}                      & \cite{haynes_crc_2011} S.4-151 \\
-    Bindungslänge $r_\text{bond}$ & \SI{2.3515}{\angstrom}                      & berechnet\footnotemark[1]      \\
+    Dichte $\rho$, kristallin     & \SI{2.3296}{\gpcc}                       & \cite{haynes_crc_2011} S.4-87  \\
+    Dichte $\rho$, amorpher Film  & \SI{2.29}{\gpcc}                         & \cite{remes_optical_1998}      \\
+                                  & (\SI{2.2}{\gpcc} - \SI{2.24}{\gpcc})     & \cite{renner_density_1973}     \\
+    Schmelztemperatur $T_m$       & \SI{1414}{\celsius} (\SI{1687}{\kelvin}) & \cite{haynes_crc_2011} S.4-87  \\
+    Atomgewicht $u$               & \SI{28.086}{\gram\per\mole}              & \cite{haynes_crc_2011} S.4-13  \\
+    Kristallstruktur              & diamant                                  & \cite{haynes_crc_2011} S.4-151 \\
+    Gitterkonstante $a$           & \SI{5.4305}{\angstrom}                   & \cite{haynes_crc_2011} S.4-151 \\
+    Bindungslänge $r_\text{bond}$ & \SI{2.3515}{\angstrom}                   & berechnet\footnotemark[1]      \\
+    Struktur von \ce{SiH4}        & tetraedrisch                             & \cite{haynes_crc_2011} S.9-29  \\
+    Bindungslänge in \ce{SiH4}    & \SI{1.4798}                              & \cite{haynes_crc_2011} S.9-29  \\
     \hline
   \end{tabular}
 
@@ -106,16 +92,36 @@
   \oddrowcolors
   \begin{tabular}{|lll|}
     \hline
-    \textbf{Größe}                                         & \textbf{Wert}                                 & \textbf{Referenz}                   \\
+    \textbf{Größe}                                         & \textbf{Wert}                            & \textbf{Referenz}                   \\
     \hline
-    Dichte $\rho$, $\alpha$-kristallin, \SI{298}{\kelvin}  & \SI{3.98}{\gpcc}                              & \cite{haynes_crc_2011} S.4-??       \\
-    Dichte $\rho$, $\alpha$-kristallin, \SI{1500}{\kelvin} & \SI{3.80}{\gpcc}                              & \cite{fiquet_high-temperature_1999} \\
-    Dichte $\rho$, $\gamma$-kristallin, \SI{300}{\kelvin}  & \SI{3.67}{\gpcc}                              & \cite{dynys_alpha_1982}             \\
-    Dichte $\rho$, amorph, \SI{300}{\kelvin}               & \SI{3.2}{\gpcc}-\SI{3.2}{\gpcc}               & \cite{wang_dependence_1997}         \\
-    Schmelztemperatur $T_m$                                & \SI{55555}{\celsius} (\SI{55828.15}{\kelvin}) & \cite{haynes_crc_2011} S.4-87       \\
-    Atomgewicht $u$, \ce{Al}                               & \SI{55555}{\gram\per\mole}                    & \cite{haynes_crc_2011} S.4-87       \\
-    Atomgewicht $u$, \ce{O}                                & \SI{55555}{\gram\per\mole}                    & \cite{haynes_crc_2011} S.4-87       \\
+    Dichte $\rho$, $\alpha$-kristallin, \SI{300}{\kelvin}  & \SI{3.99}{\gpcc}                         & \cite{haynes_crc_2011} S.4-45       \\
+                                                           & \SI{3.98}{\gpcc}                         & \cite{fiquet_high-temperature_1999} \\
+    Dichte $\rho$, $\alpha$-kristallin, \SI{1500}{\kelvin} & \SI{3.80}{\gpcc}                         & \cite{fiquet_high-temperature_1999} \\
+    Dichte $\rho$, $\gamma$-kristallin, \SI{300}{\kelvin}  & \SI{3.67}{\gpcc}                         & \cite{dynys_alpha_1982}             \\
+    Dichte $\rho$, amorph, \SI{300}{\kelvin}               & \SI{3.2}{\gpcc}-\SI{3.2}{\gpcc}          & \cite{wang_dependence_1997}         \\
+    Schmelztemperatur $T_m$, $\alpha$-kristallin           & \SI{2054}{\celsius} (\SI{2327}{\kelvin}) & \cite{haynes_crc_2011} S.4-87       \\
+    Atomgewicht $u$, \ce{Al}                               & \SI{26.982}{\gram\per\mole}              & \cite{haynes_crc_2011} S.1-12       \\
+    Atomgewicht $u$, \ce{O}                                & \SI{15.999}{\gram\per\mole}              & \cite{haynes_crc_2011} S.1-13       \\
+    Kristallstruktur                                       & corundum                                 & \cite{haynes_crc_2011} S.4-146      \\
+    Gitterkonstante $a$                                    & \SI{4.7591}{\angstrom}                   & \cite{haynes_crc_2011} S.4-146      \\
+    Gitterkonstante $c$                                    & \SI{12.9894}{\angstrom}                  & \cite{haynes_crc_2011} S.4-146      \\
     \hline
   \end{tabular}
 
+\end{table}
+
+\begin{table}[H]
+  \centering
+  \caption{Physikalische Konstanten}
+  \oddrowcolors
+  \begin{tabular}{|lll|}
+    \hline
+    \textbf{Größe}                  & \textbf{Wert}                           & \textbf{Referenz}               \\
+    \hline
+    Avogadro-Konstante $N_\text{A}$ & \SI{6.02214179e23}{\per\mole}              & \cite{haynes_crc_2011} S.1-1    \\
+    Boltzmann-Konstante $k_B$       & \SI{1.3806504e-23}{\joule\per\kelvin}   & \cite{haynes_crc_2011} S.1-2    \\
+    Molare Gaskonstante $R$         & \SI{8.31472e23}{\joule\per\mole\kelvin} & \cite{haynes_crc_2011} S.1-2    \\
+    Atomare Masseneinheit $u$       & \SI{1.660653872e-27}{\kilo\gram}        & \cite{haynes_crc_2011} S.1-2    \\
+    \hline
+  \end{tabular}
 \end{table}
