--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -63,7 +63,7 @@
 \todoline{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
 \todoline{figures und tables positionieren!}
 \todoline{Erste Absätze: Keine Einrückung.}
-\todoline{Überprüfen, wo von Simulationen, Parsivald-Problemen, allgemeines Systemverhalten und Experimenten die Rede ist}
+\todoline{Überprüfen, wo von Simulationen, Parsivald-Problemen, allgemeines System-Verhalten und Experimenten die Rede ist}
 \todoline{Keine Ebenen mit nur einem Eintrag (e.g. Kupfer-Ergebnisse)}
 \todoline{Mit Vortrag abgleichen}
 \todoline{Aktivierungsenergien, Arrhenius-Gleichung, PVD-Raten einbinden}
