--- a/results.tex
+++ b/results.tex
@@ -7,7 +7,7 @@ Dazu werden verschiedene Systeme auf unterschiedliche Aspekte von Gas\-phasen\-a
 Abschnitt~\ref{goldpvd} zeigt anhand von Gold-PVD allgemeine Voruntersuchungen eines Parametersatzes, strukturelle Unterschiede zwischen realen und simulierten per PVD abgeschiedenen Schichten, die Simulation von Schichtabscheidungen auf strukturierten Substraten sowie einen Vergleich der Laufzeitgrößen mit theoretischen Werten.
 Im anschließenden Abschnitt~\ref{copperpvd} werden Voruntersuchungen unterschiedlicher Parametersätze, die Bildung von Unebenheiten an der Oberfläche und deren automatische Schließung in der Parsivald-Simulation anhand von Kupfer-PVD vorgestellt.
 Danach werden Kupfer-Nickel-Multi\-lagen\-systeme in Abschnitt~\ref{multilayer} mit Parsivald simuliert und die Ergebnisse mit denen reiner MD-Simulationen verglichen.
-In Abschnitt~\ref{siliconpvd} werden dann Silizium-PVD-Systeme mit dem Ziel der Abscheidung nichtmetallischer Schichten auf Amorphität und Porösität untersucht.
+In Abschnitt~\ref{siliconpvd} werden dann Silizium-PVD-Systeme mit dem Ziel der Abscheidung nichtmetallischer Schichten auf Porösität und Wachstum amorpher Strukturen untersucht.
 Zuletzt kehrt Abschnitt~\ref{aluminaald} kurz zum Thema der Bachelorarbeit zurück und untersucht mit MD-Methoden die Stabilität von TMA und Wasser als Precursoren der \ce{Al2O3}-ALD sowie die Hydroxylierung einer Aluminiumoxid-Oberfläche durch Wassermoleküle.
 
 %% \input{goldpvd}
