--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -29,22 +29,22 @@ Es ist daher unwahrscheinlich, dass die \pot{narayanan}-Potentialdatei komplizie
 \subsection{Voruntersuchungen}
 
 Wie in den vorherigen Abschnitten werden hier separate Voruntersuchungen durchgeführt, zu denen die Reaktion von Precursormolekülen mit der Oberfläche ergänzt wurde.
+Die Referenzwerte sind in Anhang~\ref{appendix_constants} zusammen gefasst.
 
-\subsubsection{Strukturelle Eigenschaften von \ce{Al2O3}}
+\subsubsection{Vergleich der strukturellen Eigenschaften von \ce{Al2O3}}
 
-Zum Vergleich der strukturellen Eigenschaften des Bulkmaterials, wie etwa Dichte, Bindungslänge und Koordinationszahlen, wurde in der MD-Simulation ein $\alpha$-\ce{Al2O3}-Kristall bei \SI{1500}{\kelvin} für \num{100000} Zeitschritte isotherm-isobar relaxiert und vor den abschließenden Messungen auf Raumtemperatur herunter gekühlt.
+Zum Vergleich der strukturellen Eigenschaften des Bulkmaterials wurde in MD-Simulationen ein $\alpha$-\ce{Al2O3}-Kristall bei \SI{1500}{\kelvin} für \num{100000} Zeitschritte isotherm-isobar relaxiert und vor den abschließenden Messungen auf Raumtemperatur herunter gekühlt.
 Die Abkühlung wurden versehentlich um einen Faktor 10 zu schnell durchgeführt, weshalb die beobachteten Dichten vorsichtig mit experimentellen Werten zu vergleichen sind, da sie noch vom Wert bei höheren Temperaturen dominiert sein können.
 Eine erneute Berechnung der Werte steht noch aus, doch zeigen sich anhand der Dichten der amorpher Strukturen genügend Hinweise auf die Anwendbarkeit der Parametrisierungen.
-Referenzwerte der Dichten für unterschiedliche Temperaturen wurden aus Referenz~\cite{fiquet_high-temperature_1999} entnommen, in der \SI{3.99}{\gpcc} bei Raumtemperatur und \SI{3.80}{\gpcc} bei \SI{1500}{\kelvin} berichtet werden.
+Referenzwerte der Dichten für unterschiedliche Temperaturen liegen bei \SI{3.99}{\gpcc} bei Raumtemperatur und \SI{3.80}{\gpcc} bei \SI{1500}{\kelvin}\cite{fiquet_high-temperature_1999}.
+Bindungslängen und Koordinationszahlen wurden direkt aus der RDF kristalliner Strukturen bestimmt.
+Ihre Referenzwerte wurden auf die gleiche Weise durch die Untersuchung der idealen Kristallstruktur bestimmt, welche mittels Materials Studio\cite{biovia_materials_2014} auf Basis eines $\alpha$-\ce{Al2O3}-Kristalles präpariert wurde, wobei aufgrund identischer Dichten und übereinstimmender Kristallgitter\cite{haynes_crc_2011} von einer guten Übereinstimmung der Referenzwerte mit experimentellen Werten auszugehen ist.
 
 Für die Bestimmung der Dichte der amorphen Struktur wurde das Bulkmaterial über den Schmelzpunkt von \SI{2317}{\kelvin} auf \SI{2555}{\kelvin} erhitzt, auf dieser Temperatur relaxiert und langsam auf Raumtemperatur abgekühlt.
 Aufgrund der strukturellen Vielfalt bei amorphen Aluminiumoxiden liegt der Referenzbereich der Dichte von gasphasen-abgeschiedenen \ce{Al2O3}-Schichten zwischen \SI{3.2}{\gpcc} und \SI{3.9}{\gpcc}\cite{wang_dependence_1997}.
 
-Bindungslängen und Koordinationszahlen wurden direkt aus der radialen Verteilungsfunktion kristaliner Strukturen bestimmt, wobei die Referenzwerte auf gleiche Weise durch die Untersuchung der Kristallstruktur bestimmt wurden, welche mittels Materials Studio\cite{biovia_materials_2014} auf Basis eines $\alpha$-\ce{Al2O3}-Kristalles präpariert wurde.
-Aufgrund identischer Dichten und übereinstimmender Kristallgitter\todo{HAYNES CRC?} ist hier von einer guten Übereinstimmung mit experimentellen Werten auszugehen.
-
 Die Verteilung der Koordinationszahlen amorpher Schichten wurde in dieser Arbeit nicht näher untersucht, da einerseits nur Vergleiche mit anderen MD-Rechnungen zur Verfügung stehen\cite{gutierrez_molecular_2002}, andererseits ein eigenes Werkzeug hätte geschrieben werden müssen.
-Eine Einarbeitung eines solchen Werkzeuges zur Bestimmung der Koordinationslängen in Parsivald könnte allerdings helfen, die Struktur der Schicht während der laufenden Simulation zu untersuchen.
+Eine Integration eines solchen Werkzeuges zur Bestimmung der Verteilung der Koordinationen in Parsivald könnte allerdings helfen, die Struktur der Schicht während der laufenden Simulation zu untersuchen.
 
 \begin{table}[bp]
   \oddrowcolors
@@ -75,7 +75,7 @@ Die beiden verbleibenden Parametersätze zeigen eine geringere Dichte, die sich 
 
 Eine Bestimmung der amorphen Dichten für die \pot{liu}- und \pot{narayanan}-Parametersätze zeigt für \pot{liu} mit \SI{3.66}{\gpcc} eine amorphe Dichte im erwarteten Bereich, während \pot{narayanan} bei allen Simulationen eine Dichte von \SI{2.93}{\gpcc} erreicht und damit unterhalb der beobachteten Werte liegt, obwohl es die besten Ergebnisse für kristalline Strukturen zeigt.
 
-\subsubsection{Simulationen der Stabilität von Precursorn}
+\subsubsection{Simulationen der Stabilität von Precursormolekülen}
 
 Zur Untersuchung der Stabilität der Precursormoleküle wurden diese einzeln präpariert und per LAMMPS mit verschiedenen Kraftfeldern im kanonischen Ensemble simuliert.
 Dabei war schnell ersichtlich, dass Trimethylaluminium (TMA) von der \pot{liu}- sowie der \pot{narayanan}-Para\-metr\-isierung durch die fehlende Beschreibung von \ce{Al-C}-Bindungen praktisch nicht wiedergegeben werden kann.
@@ -91,7 +91,7 @@ Anhand des \pot{Al\_AlO\_AlN}-Parametersatzes wurden auch Simulationen der Reakt
 Abschließend soll die reaktive Hydroxylierung einer Kristall-Oberfläche mit Wassermolekülen simuliert werden.
 Dazu wurde eine Kristalloberfläche mit einer variablen Menge von Wassermolekülen in einem vertikalen Abstand, welcher mit \SI{10}{\angstrom} größer als die ReaxFF-Inter\-aktions\-reich\-weite von \SI{6}{\angstrom}, vorbereitet (Abbildung~\ref{fig:wateraluminasurface-a}) und in einer reinen MD-Simulation mit LAMMPS simuliert.
 In der Simulation werden die Wassermoleküle mit einer entsprechend der Maxwell-Distribution bei \SI{500}{\kelvin} versehen, die Atome an der Unterseite des Substrates fest gehalten und das aus Notwendigkeit verwendete Berendsen-Thermostat nur auf den mittleren Teil des Substrates angewandt, um seinen Einfluss auf die Reaktionen zu verringern.
-Dabei wird eine chemische Adsorption der Wassermoleküle erwartet\cite{shapovalov_ab_2000}, die zu einer Sättigung derOberfläche mit Hydroxyl-Gruppen bei einer Bedeckung von \SI{9.2}{\per\square\nano\meter}\cite{kim_energy_2011} führen sollte.
+Dabei wird eine chemische Adsorption der Wassermoleküle erwartet\cite{shapovalov_ab_2000}, die zu einer Sättigung der Oberfläche mit Hydroxyl-Gruppen bei einer Bedeckung von \SI{9.2}{\per\square\nano\meter}\cite{kim_energy_2011} führen sollte.
 Die Zahl der Wassermoleküle in der Simulation kann in den drei untersuchten Systemen zu Hydroxyl-Bedeckungen von \SI{5.8}{\per\square\nano\meter}, \SI{19.0}{\per\square\nano\meter} und \SI{57.6}{\per\square\nano\meter} führen.
 \begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
@@ -128,7 +128,7 @@ Zusammen mit dem Problem, Trimethylaluminium nicht darstellen zu können, ist di
 Das Ergebnis der Simulationen für die \pot{liu}-Parameter (Abbildungen~\ref{fig:wateraluminasurface-b} und~\ref{fig:wateraluminasurface-c}) zeigt jedoch die gleichmäßige Bedeckung der Oberfläche mit Hydroxylgruppen (\SI{9.5}{\per\square\nano\meter}) neben gelegentlich adsorbierten Wassermolekülen, die keine Oberflächenreaktion eingegangen sind.
 Letztere sollten sich aber auf längere Sicht durch die Einflüsse der Überkoordinationsterme des ReaxFF-Potentiales von der Oberfläche lösen oder eine Reaktion mit benachbarten Sauerstoff-Atomen eingehen.
 Trotz der unterschiedlichen Startbedingungen stimmt der Bedeckungsgrad der Oberfläche mit Hydroxylgruppen den Maximalwerten von \SI{9.2}{\per\square\nano\meter}\cite{kim_energy_2011} überein.
-Die verbleibenden Wassermoleküle sind keine Adsorption auf der Oberfläche eingegangen, sondern in der Gasphase verblieben, wie in Abbildung~\ref{fig:wateraluminasurface-b} am oberen Rand des periodischen Simulationsraumes erkennbar ist.
+Die verbleibenden Wassermoleküle sind keine Adsorption auf der Oberfläche eingegangen sondern in der Gasphase verblieben, wie in Abbildung~\ref{fig:wateraluminasurface-b} am oberen Rand des periodischen Simulationsraumes erkennbar ist.
 Einige der Wassermoleküle erscheinen durch die periodischen Randbedingungen des Simulationsraumes zerteilt, doch handelt es sich tatsächlich um vollständige Wassermoleküle verbleiben.
 Es konnte damit gezeigt werden, dass die Begrenzung der Reaktion von Wasser durch die sterische Hinderung der Wassermoleküle in der Simulation wiedergegeben wird.
 
